Update .gitignore and index.html, and modify base_url in main.js

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Career Questions</title>
+  <link rel="icon" type="image/png" href="./carreer.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/src/style.css">
 </head>
@@ -17,10 +18,13 @@
     <p class="mb-4 text-gray-700">Thanks again for your help, and happy questioning! 😊</p>
     <label for="career-path" class="block text-lg font-medium mb-2 text-gray-700"><strong>Choose a Career Path:</strong></label>
     <select id="career-path" class="block p-2 mb-4 border rounded-lg text-gray-700">
-      <option value="Data Analyst/Business Analyst">Data Analyst/Business Analyst</option>
+      <option value="Data Analyst/Business Analyst">Data Scientist</option>
       <option value="AI/ML Engineer">AI/ML Engineer</option>
-      <option value="Software Developer">Software Developer</option>
-      <option value="Full Stack Web Developer">Full Stack Web Developer</option>
+      <option value="Software Developer">Full Stack Developer</option>
+      <option value="Full Stack Web Developer">Data Analyst / Business Analyst</option>
+      <option value="Full Stack Web Developer">Cloud Engineer (DevOps)</option>
+      <option value="Full Stack Web Developer">Cyber Security Analyst</option>
+      <option value="Full Stack Web Developer">Blockchain Developer</option>
     </select>
     <div id="questions-container">
       <label for="question-1" class="block text-lg font-medium mb-2 text-gray-700"><strong>Your Question 1:</strong></label>
