Update career path options in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -18,13 +18,13 @@
     <p class="mb-4 text-gray-700">Thanks again for your help, and happy questioning! 😊</p>
     <label for="career-path" class="block text-lg font-medium mb-2 text-gray-700"><strong>Choose a Career Path:</strong></label>
     <select id="career-path" class="block p-2 mb-4 border rounded-lg text-gray-700">
-      <option value="Data Analyst/Business Analyst">Data Scientist</option>
+      <option value="Data Scientist">Data Scientist</option>
       <option value="AI/ML Engineer">AI/ML Engineer</option>
-      <option value="Software Developer">Full Stack Developer</option>
-      <option value="Full Stack Web Developer">Data Analyst / Business Analyst</option>
-      <option value="Full Stack Web Developer">Cloud Engineer (DevOps)</option>
-      <option value="Full Stack Web Developer">Cyber Security Analyst</option>
-      <option value="Full Stack Web Developer">Blockchain Developer</option>
+      <option value="Full Stack Developer">Full Stack Developer</option>
+      <option value="Data Analyst / Business Analyst">Data Analyst / Business Analyst</option>
+      <option value="Cloud Engineer (DevOps)">Cloud Engineer (DevOps)</option>
+      <option value="Cyber Security Analyst">Cyber Security Analyst</option>
+      <option value="Blockchain Developer">Blockchain Developer</option>
     </select>
     <div id="questions-container">
       <label for="question-1" class="block text-lg font-medium mb-2 text-gray-700"><strong>Your Question 1:</strong></label>
